fixing spacing in footer

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,8 @@
 
+* {
+    font-family: 'Quicksand', sans-serif;
+}
+
 /* Jumbotron */
 
 .jumbotron {
@@ -25,7 +29,9 @@
 .jumbotron h1 {
     align-self: center;
     color: purple;
-    font-size:60px;
+    font-size: medium;
+    font-weight: 200;
+    align-items: center;
 }
 
 
@@ -47,8 +53,16 @@
     justify-content: center;
 }
 
-.hours-column {
-    font-family: 'Courier New', Courier, monospace;
+.hours-column p {
+    font-size: 1.5em;
+}
+
+.form-column h3 {
+    font-family: 'Caveat', cursive;
+}
+
+.form-label {
+    font-family: 'Caveat', cursive;
 }
 
 /* About Section */
@@ -68,19 +82,22 @@
     background-color: blanchedalmond;
     width: 100%;
     height: 10%;
+    align-items: baseline;
 }
 
-.footer-links ul {
+.footer-links {
+    margin-right: 20px;
+}
+
+.footer-links a {
     list-style-type: none;
     text-decoration: none;
-    display: flex;
-    justify-content: center;
-    gap: 40%;
-}
-.footer-links ul a {
-    flex-wrap: nowrap;
+    /* display: flex;
+    justify-content: center; */
+    /* gap: 40%; */
+    /* flex-wrap: nowrap; */
     color: purple;
-    justify-content: center;
+    /* justify-content: center; */
 }
 
 .credits p {
